# airflow-control

./: .gitignore  99-usb-serial.rules  run-ros-docker-cron.sh  run-ros-docker.sh
docker/: .docker-compose.yml.swo  .docker-compose.yml.swp
docker/ros/: .Dockerfile.swp  .ros_entrypoint.sh.swp  Dockerfile  Makefile  build.sh  docker-run-jetson.sh  get_python_api.py  install_opencv-3.4.8.sh  ros_entrypoint.sh
frontend-server/: index.html  package-lock.json  package.json
frontend-server/config/: index.js
frontend-server/src/: App.vue  main.js
frontend-server/src/components/: Home.vue
mcu-firmware-damper-control/damper-modbus/: damper-modbus.ino
mqtt-websocket-interface/: .package.json.swp  package-lock.json  package.json  start_server.sh
mqtt-websocket-interface/src/: app.js
old/: docker-compose.yml  start-on-boot.sh
ros/: SN14389.conf
ros-workspace/dev_ws/: ros_launch_script.sh
ros-workspace/dev_ws/include/: kill_proccesses_using_webcam.sh
ros-workspace/dev_ws/install/: local_setup.sh  setup.sh
ros-workspace/dev_ws/install/computer_vision/lib/computer_vision/: computer_vision
ros-workspace/dev_ws/install/computer_vision/share/computer_vision/: package.sh
ros-workspace/dev_ws/install/height_pid/lib/height_pid/: height_pid
ros-workspace/dev_ws/install/height_pid/share/height_pid/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros-workspace/dev_ws/install/height_pid/share/height_pid/cmake/: height_pidConfig.cmake
ros-workspace/dev_ws/install/modbus_rtu/lib/modbus_rtu/: modbus_rtu
ros-workspace/dev_ws/install/modbus_rtu/share/modbus_rtu/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros-workspace/dev_ws/install/mqtt_ros_interface/lib/mqtt_ros_interface/: mqtt_pub_ros_sub  mqtt_sub_ros_pub  mqtt_sub_ros_pub_exec
ros-workspace/dev_ws/install/mqtt_ros_interface/share/ament_index/resource_index/parent_prefix_path/: mqtt_ros_interface
ros-workspace/dev_ws/install/mqtt_ros_interface/share/mqtt_ros_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros-workspace/dev_ws/launch/: airflow_ros_bringup.py
ros-workspace/dev_ws/log/: latest_build
ros-workspace/dev_ws/src/computer_vision/: package.xml  setup.py
ros-workspace/dev_ws/src/computer_vision/computer_vision/: camera.py
ros-workspace/dev_ws/src/height_pid/: CMakeLists.txt
ros-workspace/dev_ws/src/height_pid/src/: height_pid.cpp  height_pid.cpp.backup
ros-workspace/dev_ws/src/modbus_rtu/: CMakeLists.txt
ros-workspace/dev_ws/src/modbus_rtu/src/: .modbus_rtu.cpp.swp  modbus_rtu.cpp
ros-workspace/dev_ws/src/mqtt_ros_interface/: CMakeLists.txt
ros-workspace/dev_ws/src/mqtt_ros_interface/include/: mqtt_helper.h  mqtt_sub_ros_pub.h
ros-workspace/dev_ws/src/mqtt_ros_interface/src/: mqtt_helper.cpp  mqtt_pub_ros_sub.cpp  mqtt_sub_ros_pub.cpp  mqtt_sub_ros_pub_exec.cpp
ros/old/: Dockerfile.amd64  build-amd64.sh  docker-run-amd64.sh
ros/tensorrt_demos/: .trt_yolo.py.swp  trt_yolo.py
